# pytest-ruff

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest_ruff.py  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
pytest_ruff/: __init__.py  _pytest_compat.py
tests/: test_plugin.py
tests/assets/: long_line.py
tests/assets/config_broken/: empty.py  ruff.toml
tests/assets/long_line_config/: ruff.toml
