[project]
name = "pytest-ruff"
description = "pytest plugin to check ruff requirements."
authors = [{"name" = "Iuri de Silvio", "email" = "iurisilvio@gmail.com"}]
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Operating System :: OS Independent", "Framework :: Pytest", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Topic :: Software Development :: Libraries :: Python Modules"]
dynamic = ["version"]
dependencies = [
    "ruff>=0.0.242"
]

[project.urls]
Homepage = "https://github.com/businho/pytest-ruff"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
]

[project.entry-points.pytest11]
ruff = "pytest_ruff"

[tool.pytest.ini_options]
addopts = "--capture=no"

[tool.ruff]
line-length = 88

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
